fixing the footer spacing

--- a/main.css
+++ b/main.css
@@ -872,7 +872,7 @@ body {
   pointer-events: none;
   user-select: none;
 }
-.footer .wrapper .label .Section_right .Button_Pink {
+.footer .wrapper .label .Section_right .social .Button_Pink {
   width: 123px;
   height: 27.023px;
   border-radius: 100rem;
